[gd_scene load_steps=6 format=2]

[ext_resource path="res://Imagens/Peao.png" type="Texture" id=1]
[ext_resource path="res://Script_Peao.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 15.1327

[sub_resource type="Animation" id=2]
resource_name = "Girando"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 20.0, 140.0, 260.0, 380.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 140.0 ]
}

[node name="Node2D" type="Node2D"]
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Area2D"]
rotation = 2.44346
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="Area2D"]

[node name="Timer" type="Timer" parent="Area2D"]
wait_time = 5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Area2D"]
anims/Girando = SubResource( 2 )
anims/RESET = SubResource( 3 )

[connection signal="area_entered" from="Area2D" to="Area2D" method="Acerto_Dano"]
[connection signal="body_entered" from="Area2D" to="Area2D" method="Toque_Dano"]
[connection signal="timeout" from="Area2D/Timer" to="Area2D" method="Peao_Recarregado"]
